Correção no Menu Responsivo

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
         <div class="col-2 order-1 d-block d-lg-none text-left">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+            <span class="navbar-toggler-icon"><i id="btn-menu-responsivo" class="fa fa-bars" aria-hidden="true"></i></span>
           </button>
         </div>
 
-        <div class="col-8 order-2 col-lg-4 order-lg-1 text-center">
+        <div class="col-8 order-2 col-lg-4 order-lg-1 text-center logo-bloco">
           <div class="logo"><span class="font-weight-bold">MERLIN'S</span> POTIONS</div>
           <div class="subtitulo-logo"><span>fine potions since 1026</span></div>
         </div>
 
-        <div class="col-12 order-5 col-lg-4 order-lg-2   d-none d-lg-block">
+        <div class="col-10 order-5 col-lg-4 order-lg-2 pesquisa-bloco">
           <form class="form-inline">
             <div class="input-group pesquisa">
               <span class="input-group-addon"><i class="fa fa-search" aria-hidden="true"></i></span>
